# create-vdc-with-edge-portal-api-demo

./: .gitignore  Dockerfile  Readme.md  example.har  nginx.conf  package-lock.json  package.json  tsconfig.json  webpack.config.js
docs/portal-api/: openapi.json
server/: Cargo.toml
server/src/: main.rs
src/: index.ts  script.spec.ts  service_worker.ts
src/portal-api/: openapi.json
