[package]
name = "server"
version = "0.1.0"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
futures = "0.1"
hyper-tls = "0.3.2"
http = "0.1"
cookie = "0.12.0"